# docs/swagger.yaml
@@ -105,6 +105,8 @@ definitions:
     type: object
   aiapi.CreateChatSessionRequest:
     properties:
+      anonymous:
+        type: boolean
       messages:
         items:
           $ref: '#/definitions/ai.SimpleChatMessage'
@@ -114,6 +116,7 @@ definitions:
       title:
         type: string
     required:
+    - anonymous
     - messages
     - model_id
     - title
@@ -534,6 +537,9 @@ definitions:
     - AIChatMessageStatusFailed
   model.AIChatSession:
     properties:
+      anonymous:
+        description: Whether the session is anonymous
+        type: boolean
       created_at:
         type: string
       end_time:
@@ -564,6 +570,7 @@ definitions:
         description: User ID
         type: string
     required:
+    - anonymous
     - created_at
     - end_time
     - id
@@ -2259,22 +2266,16 @@ definitions:
     - 1000000000
     - 60000000000
     - 3600000000000
-    - -9223372036854775808
-    - 9223372036854775807
     - 1
     - 1000
     - 1000000
     - 1000000000
     - 60000000000
     - 3600000000000
-    - -9223372036854775808
-    - 9223372036854775807
     - 1
     - 1000
     - 1000000
     - 1000000000
-    - 60000000000
-    - 3600000000000
     type: integer
     x-enum-varnames:
     - minDuration
@@ -2293,22 +2294,16 @@ definitions:
     - Second
     - Minute
     - Hour
-    - minDuration
-    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
     - Second
     - Minute
     - Hour
-    - minDuration
-    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
     - Second
-    - Minute
-    - Hour
   toolset.ToolSetType:
     enum:
     - utils
